links main CSS to radar.html in order to have a dynamic interaction with the radar on the page

--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,12 @@
 /* main body CSS file */
+
+.radar-display {
+  display: flex;
+  flex-direction: column;
+}
+
+.radar-map {
+  height: 370px;
+  width: 100%;
+  border: 1px solid blue;
+}
