--- a/css/main.css
+++ b/css/main.css
@@ -10,3 +10,26 @@
   width: 100%;
   border: 1px solid blue;
 }
+
+.weather {
+  display: flex;
+  justify-content: center;
+  /* border: 1px solid crimson; */
+}
+
+.w-disp {
+  /* border: 1px solid crimson; */
+  width: 540px;
+  /* max-width: 540px; */
+  max-height: 100%;
+  justify-content: center;
+  margin-top: 20px;
+  /* text-align: center; */
+}
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  /* text-align: center; */
+}
