--- a/css/background.css
+++ b/css/background.css
@@ -1,3 +1,8 @@
-.weather {
-    max-height: ;
-}
+body {
+    background-image: url(../images/Broken.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    height: 100%;
+  }
