--- a/css/footer.css
+++ b/css/footer.css
@@ -1,4 +1,34 @@
-/* footer CSS file */
+/* Footer Design */
+
+.container-footer {
+  align-items: center;
+  display: flex;
+  width: 100%;
+}
+
+.logo img {
+  width: 100%;
+}
+
+.media {
+  display: flex;
+  justify-content: space-evenly;
+  width: 50%;
+}
+
+.footer-text {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  
+}
+
+.footer-text p {
+  display: flex;
+  font-size: smaller;
+  margin: auto;
+  text-align: center;
+}
 
 .fa-facebook-f {
   color: #4267B2;
