--- a/css/background.css
+++ b/css/background.css
@@ -2,3 +2,7 @@ body {
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
 }
+
+body, html {
+  height: 100%;
+}
