--- a/css/main.css
+++ b/css/main.css
@@ -56,3 +56,11 @@
   height:fit-content;
 
 }
+
+.special-card {
+  background-color: rgba(70, 130, 180, 1);
+}
+
+.special-card2 {
+  opacity: .75;
+}
