remove carousel.html, and adds a carousel to index.html with data being rendered from index.js

--- a/css/main.css
+++ b/css/main.css
@@ -56,3 +56,17 @@
   height:fit-content;
 
 }
+
+main {
+  display: flex;
+  flex-direction: column;
+}
+
+#weather-carousel {
+  /* border: 1px solid crimson; */
+  display: flex;
+  /* justify-content:center; */
+  /* align-items: center; */
+  /* width: 50%; */
+
+}
